@@ -1,3 +1,8 @@
+Thu Feb 19 08:09:28 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
+
+	* src/menu.c: Some changes to follow the GNOME style guide.
+	* src/option-dialog.c (option_dialog): Likewise.
+
 Tue Feb 17 23:06:43 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>
 
 	* src/score-dialog.c (score_dialog): No more modal dialog.
